# django

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
docker/development/: Dockerfile  docker-compose.yaml
migrations/: env.py
src/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/config/: __init__.py
src/extensions/: __init__.py
src/templates/: base.html  index.html
src/templates/posts/: index.html
src/templates/questions/: categories.html
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
