[tool.poetry]
name = "report"
version = "0.1.0"
description = "Description"
authors = ["Hai Nghia <nghia.ho@permate.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
